[package]
name = "gmicrobit"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
heapless = "0.8.0"
microbit-v2 = "0.15.0"
panic-halt = "0.2.0"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]

[profile.release]
codegen-units = 1
lto = true
